<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/karst_city"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_title"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        tools:text="@string/app_title" />

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="507dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/button_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_first"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:text="@string/button_first" />

        <Button
            android:id="@+id/button_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_second"
            tools:text="@string/button_second" />

        <Button
            android:id="@+id/button_third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_third"
            tools:text="@string/button_third" />

        <Button
            android:id="@+id/button_fourth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_fourth"
            tools:text="@string/button_fourth" />

        <Button
            android:id="@+id/button_fifth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_fifth"
            tools:text="@string/button_fifth" />

        <Button
            android:id="@+id/button_sixth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sixth"
            tools:text="@string/button_sixth" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>