<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/karst_city"
    tools:context=".MainActivityFace">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/button_fourth"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="60dp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        tools:text="@string/button_fourth"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="351dp"
        android:layout_height="399dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="117dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="fill_parent"
                    android:layout_height="133dp"
                    android:background="@drawable/back"
                    android:foreground="@drawable/the_papa_pray"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="66dp"
                    android:background="@drawable/back"
                    android:gravity="center"
                    android:text="@string/Jack"
                    android:textColor="@color/white"
                    android:textSize="24dp" />

                <ScrollView
                    android:id="@+id/scrollView1"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/back"
                    android:fadeScrollbars="false"
                    android:fillViewport="false"
                    android:gravity="center"
                    android:scrollbarStyle="insideOverlay"
                    android:scrollbarThumbVertical="@color/transparent_red"
                    android:textColor="@color/white"
                    android:textSize="24dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView1_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Jack_i1"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView1_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Jack_i2"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView1_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Jack_i3"
                            android:textColor="@color/white"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/textView1_4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Jack_i4"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView1_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Jack_i5"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView1_6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Jack_i6"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView1_7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Jack_i7"
                            android:textColor="@color/white"
                            android:textSize="24dp" />
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="117dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="fill_parent"
                    android:layout_height="133dp"
                    android:background="@drawable/back"
                    android:foreground="@drawable/the_sweet"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="66dp"
                    android:background="@drawable/back"
                    android:gravity="center"
                    android:text="@string/Anthony"
                    android:textColor="@color/white"
                    android:textSize="24dp" />

                <ScrollView
                    android:id="@+id/scrollView2"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/back"
                    android:fadeScrollbars="false"
                    android:gravity="center"
                    android:scrollbarStyle="insideOverlay"
                    android:scrollbarThumbVertical="@color/transparent_red"
                    android:textColor="@color/white"
                    android:textSize="24dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Anthony_i1"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView2_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Anthony_i2"
                            android:textColor="@color/white"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/textView2_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Anthony_i3"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView2_4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Anthony_i4"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView2_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Anthony_i5"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView3_6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Jack_i5"
                            android:textColor="@color/white"
                            android:textSize="24dp" />
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="117dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="fill_parent"
                    android:layout_height="133dp"
                    android:background="@drawable/back"
                    android:foreground="@drawable/the_noah"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="66dp"
                    android:background="@drawable/back"
                    android:gravity="center"
                    android:text="@string/Noah"
                    android:textColor="@color/white"
                    android:textSize="24dp" />

                <ScrollView
                    android:id="@+id/scrollView3"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/back"
                    android:fadeScrollbars="false"
                    android:gravity="center"
                    android:scrollbarStyle="insideOverlay"
                    android:scrollbarThumbVertical="@color/transparent_red"
                    android:textColor="@color/white"
                    android:textSize="24dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Noah_i1"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView3_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Noah_i2"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView3_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Noah_i3"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView3_4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Noah_i4"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:id="@+id/textView3_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Noah_i5"
                            android:textColor="@color/white"
                            android:textSize="24dp" />
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>