<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/karst_city"
    tools:context=".MainActivityFace">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/button_third"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        tools:text="@string/button_third" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="350dp"
        android:layout_height="400dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/back"
                    android:gravity="center"
                    android:text="@string/fax_1"
                    android:textColor="@color/white"
                    android:textSize="23dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/back"
                    android:gravity="center"
                    android:text="@string/fax_2"
                    android:textColor="@color/white"
                    android:textSize="24dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/back"
                    android:gravity="center"
                    android:text="@string/fax_3"
                    android:textColor="@color/white"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/back"
                    android:gravity="center"
                    android:text="@string/fax_4"
                    android:textColor="@color/white"
                    android:textSize="24dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>